tdf#167468 - sc: fix XMATCH with mode=0 and searchdirection=-1

returns wrong value.

Off-by-one error during the calculation of the result with Reverse
search mode.

follow-up of XMatch implementation: c9245c153d349ee414fdd4f878fd10cbd8471cff

Co-authored-by: Regina Henschel <rb.henschel@t-online.de>

Change-Id: If77289d314f5960c19911c889f8d5b8eb0b839cf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188019
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>
(cherry picked from commit 649346506b8ec0670e35d30c5e04358e40244c36)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188242
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>